@@ -13,15 +13,16 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package com.google.javascript.jscomp;
+
+import static com.google.common.base.Preconditions.checkState;
 
 import com.google.javascript.jscomp.NodeTraversal.AbstractShallowCallback;
 import com.google.javascript.rhino.IR;
 import com.google.javascript.rhino.Node;
-
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
+import javax.annotation.Nullable;
 
 /**
  * When there are multiple prototype member declarations to the same class,
@@ -86,7 +87,7 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
 
   // The name of variable that will temporary hold the pointer to the prototype
   // object. Of cause, we assume that it'll be renamed by RenameVars.
-  private String prototypeAlias = "JSCompiler_prototypeAlias";
+  private static final String PROTOTYPE_ALIAS = "JSCompiler_prototypeAlias";
 
   private final AbstractCompiler compiler;
 
@@ -136,10 +137,9 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
   @Override
   public void process(Node externs, Node root) {
     GatherExtractionInfo extractionInfo = new GatherExtractionInfo();
-    NodeTraversal.traverse(compiler, root, extractionInfo);
+    NodeTraversal.traverseEs6(compiler, root, extractionInfo);
     if (extractionInfo.shouldExtract()) {
       doExtraction(extractionInfo);
-      compiler.reportCodeChange();
     }
   }
 
@@ -148,15 +148,15 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
    * through all ExtractInstance and performs extraction there.
    */
   private void doExtraction(GatherExtractionInfo info) {
-
     // Insert a global temp if we are using the USE_GLOBAL_TEMP pattern.
     if (pattern == Pattern.USE_GLOBAL_TEMP) {
       Node injectionPoint = compiler.getNodeForCodeInsertion(null);
 
-      Node var = NodeUtil.newVarNode(prototypeAlias, null)
-          .copyInformationFromForTree(injectionPoint);
+      Node var = NodeUtil.newVarNode(PROTOTYPE_ALIAS, null)
+          .useSourceInfoIfMissingFromForTree(injectionPoint);
 
-      injectionPoint.addChildrenToFront(var);
+      injectionPoint.addChildToFront(var);
+      compiler.reportChangeToEnclosingScope(var);
     }
     // Go through all extraction instances and extract each of them.
     for (ExtractionInstance instance : info.instances) {
@@ -170,24 +170,27 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
    * instead.
    */
   private void extractInstance(ExtractionInstance instance) {
-    PrototypeMemberDeclaration first = instance.declarations.getFirst();
+    PrototypeMemberDeclaration first = instance.declarations.get(0);
     String className = first.qualifiedClassName;
     if (pattern == Pattern.USE_GLOBAL_TEMP) {
       // Use the temp variable to hold the prototype.
-      Node stmt = new Node(first.node.getType(),
-         IR.assign(
-              IR.name(prototypeAlias),
-              NodeUtil.newQName(
-                  compiler, className + ".prototype",
-                  instance.parent, className + ".prototype")))
-          .copyInformationFromForTree(first.node);
+      Node classNameNode = NodeUtil.newQName(compiler, className);
+      classNameNode.putBooleanProp(Node.IS_CONSTANT_NAME, first.constant);
+      Node stmt =
+          IR.exprResult(
+              IR.assign(
+                  IR.name(PROTOTYPE_ALIAS),
+                  IR.getprop(
+                      classNameNode, IR.string("prototype"))))
+          .useSourceInfoIfMissingFromForTree(first.node);
 
       instance.parent.addChildBefore(stmt, first.node);
-    } else if (pattern == Pattern.USE_IIFE){
+      compiler.reportChangeToEnclosingScope(stmt);
+    } else if (pattern == Pattern.USE_IIFE) {
       Node block = IR.block();
       Node func = IR.function(
            IR.name(""),
-           IR.paramList(IR.name(prototypeAlias)),
+           IR.paramList(IR.name(PROTOTYPE_ALIAS)),
            block);
 
       Node call = IR.call(func,
@@ -196,14 +199,16 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
                instance.parent, className + ".prototype"));
       call.putIntProp(Node.FREE_CALL, 1);
 
-      Node stmt = new Node(first.node.getType(), call);
-      stmt.copyInformationFromForTree(first.node);
+      Node stmt = IR.exprResult(call);
+      stmt.useSourceInfoIfMissingFromForTree(first.node);
       instance.parent.addChildBefore(stmt, first.node);
+      compiler.reportChangeToEnclosingScope(stmt);
       for (PrototypeMemberDeclaration declar : instance.declarations) {
-        block.addChildToBack(declar.node.detachFromParent());
+        compiler.reportChangeToEnclosingScope(declar.node);
+        block.addChildToBack(declar.node.detach());
       }
     }
-    // Go thought each member declaration and replace it with an assignment
+    // Go through each member declaration and replace it with an assignment
     // to the prototype variable.
     for (PrototypeMemberDeclaration declar : instance.declarations) {
       replacePrototypeMemberDeclaration(declar);
@@ -214,33 +219,26 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
    * Replaces a member declaration to an assignment to the temp prototype
    * object.
    */
-  private void replacePrototypeMemberDeclaration(
-      PrototypeMemberDeclaration declar) {
+  private void replacePrototypeMemberDeclaration(PrototypeMemberDeclaration declar) {
     // x.prototype.y = ...  ->  t.y = ...
     Node assignment = declar.node.getFirstChild();
     Node lhs = assignment.getFirstChild();
     Node name = NodeUtil.newQName(
         compiler,
-        prototypeAlias + "." + declar.memberName, declar.node,
+        PROTOTYPE_ALIAS + "." + declar.memberName, declar.node,
         declar.memberName);
 
-    // Save the full prototype path on the left hand side of the assignment
-    // for debugging purposes.
-    // declar.lhs = x.prototype.y so first child of the first child
-    // is 'x'.
-    Node accessNode = declar.lhs.getFirstChild().getFirstChild();
-    Object originalName = accessNode.getProp(Node.ORIGINALNAME_PROP);
-
-    String className = "?";
-
-    if (originalName != null) {
-      className = originalName.toString();
-    }
-
-    NodeUtil.setDebugInformation(name.getFirstChild(), lhs,
-                                 className + ".prototype");
+    // Save the full prototype path on the left hand side of the assignment for debugging purposes.
+    // declar.lhs = x.prototype.y so first child of the first child is 'x'.
+    Node accessNode = declar.lhs.getFirstFirstChild();
+    String originalName = accessNode.getOriginalName();
+    String className = originalName != null ? originalName : "?";
+    name.getFirstChild().useSourceInfoFromForTree(lhs);
+    name.putBooleanProp(Node.IS_CONSTANT_NAME, lhs.getBooleanProp(Node.IS_CONSTANT_NAME));
+    name.getFirstChild().setOriginalName(className + ".prototype");
 
     assignment.replaceChild(lhs, name);
+    compiler.reportChangeToEnclosingScope(name);
   }
 
   /**
@@ -248,13 +246,13 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
    */
   private class GatherExtractionInfo extends AbstractShallowCallback {
 
-    private List<ExtractionInstance> instances = new LinkedList<>();
+    private final List<ExtractionInstance> instances = new ArrayList<>();
     private int totalDelta = pattern.globalOverhead;
 
     @Override
     public void visit(NodeTraversal t, Node n, Node parent) {
 
-      if (!n.isScript() && !n.isBlock()) {
+      if (!n.isScript() && !n.isNormalBlock()) {
         return;
       }
 
@@ -267,12 +265,10 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
 
         // Found a good site here. The constructor will computes the chain of
         // declarations that is qualified for extraction.
-        ExtractionInstance instance =
-            new ExtractionInstance(prototypeMember, n);
-        cur = instance.declarations.getLast().node;
+        ExtractionInstance instance = new ExtractionInstance(prototypeMember, n);
+        cur = instance.declarations.get(instance.declarations.size() - 1).node;
 
-        // Only add it to our work list if the extraction at this instance
-        // makes the code smaller.
+        // Only add it to our work list if the extraction at this instance makes the code smaller.
         if (instance.isFavorable()) {
           instances.add(instance);
           totalDelta += instance.delta;
@@ -281,7 +277,7 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
     }
 
     /**
-     * @return <@code true> if the sum of all the extraction instance gain
+     * @return {@code true} if the sum of all the extraction instance gain
      * outweighs the overhead of the temp variable declaration.
      */
     private boolean shouldExtract() {
@@ -290,7 +286,7 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
   }
 
   private class ExtractionInstance {
-    LinkedList<PrototypeMemberDeclaration> declarations = new LinkedList<>();
+    List<PrototypeMemberDeclaration> declarations = new ArrayList<>();
     private int delta = 0;
     private final Node parent;
 
@@ -303,8 +299,7 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
 
         // We can skip over any named functions because they have no effect on
         // the control flow. In fact, they are lifted to the beginning of the
-        // block. This happens a lot when devirtualization breaks the whole
-        // chain.
+        // block. This happens a lot when devirtualization breaks the whole chain.
         if (cur.isFunction()) {
           continue;
         }
@@ -338,28 +333,61 @@ class ExtractPrototypeMemberDeclarations implements CompilerPass {
     final Node node;
     final String qualifiedClassName;
     final Node lhs;
+    final boolean constant;
 
     private PrototypeMemberDeclaration(Node lhs, Node node) {
+      checkState(NodeUtil.isExprAssign(node), node);
       this.lhs = lhs;
       this.memberName = NodeUtil.getPrototypePropertyName(lhs);
       this.node = node;
-      this.qualifiedClassName =
-          NodeUtil.getPrototypeClassName(lhs).getQualifiedName();
+      Node classNode = getPrototypeClassName(lhs);
+      this.qualifiedClassName = classNode.getQualifiedName();
+      this.constant = classNode.getBooleanProp(Node.IS_CONSTANT_NAME);
     }
 
     private boolean isSameClass(PrototypeMemberDeclaration other) {
       return qualifiedClassName.equals(other.qualifiedClassName);
     }
 
+    private static Node getPrototypeClassName(Node qName) {
+      Node cur = qName;
+      while (cur.isGetProp()) {
+        if (cur.getLastChild().getString().equals("prototype")) {
+          return cur.getFirstChild();
+        } else {
+          cur = cur.getFirstChild();
+        }
+      }
+      return null;
+    }
+
+    private static boolean isPrototypePropertyDeclaration(Node n) {
+      if (!NodeUtil.isExprAssign(n)) {
+        return false;
+      }
+      Node lvalue = n.getFirstFirstChild();
+      if (lvalue.isGetProp()) {
+        Node cur = lvalue.getFirstChild();
+        while (cur.isGetProp()) {
+          if (cur.getLastChild().getString().equals("prototype")) {
+            return cur.isQualifiedName();
+          }
+          cur = cur.getFirstChild();
+        }
+      }
+      return false;
+    }
+
     /**
      * @return A prototype member declaration representation if there is one
      * else it returns {@code null}.
      */
+    @Nullable
     private static PrototypeMemberDeclaration extractDeclaration(Node n) {
-      if (!NodeUtil.isPrototypePropertyDeclaration(n)) {
+      if (!isPrototypePropertyDeclaration(n)) {
         return null;
       }
-      Node lhs = n.getFirstChild().getFirstChild();
+      Node lhs = n.getFirstFirstChild();
       return new PrototypeMemberDeclaration(lhs, n);
     }
   }
